aa-regex/tests/fails/any_of_empty.rs
use aa_regex::*;

fn main() {
    let _wrong = any_of!();
}
